fixed text alignment issue

--- a/style.css
+++ b/style.css
@@ -241,12 +241,15 @@ button img {
   line-height: 58px;
   margin-bottom: 16px;
   margin-top: 16px;
+  text-align: left;
+  max-width: 700px;
   text-transform: capitalize;
 }
 #knowledge .knowledge-text p {
   font-size: 16px;
   text-align: left;
   line-height: 20px;
+  max-width: 700px;
   margin-bottom: 40px;
 }
 
